# SkySpec

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
Examples/: CMakeLists.txt
Examples/Bandit/: CMakeLists.txt  RunSpecs.cpp
Examples/Bandit/src/: Plugin.cpp
Examples/Papyrus/: CMakeLists.txt  RunSpecs.cpp
Examples/Papyrus/Scripts/: MyFirstSpec.pex  SkySpec.pex  SkySpecAssertions.pex  SkySpecExpectations.pex
Examples/Papyrus/Scripts/Source/: MyFirstSpec.psc  SkySpec.psc  SkySpecAssertions.psc  SkySpecExpectations.psc
Papyrus.Reflection/: CMakeLists.txt  vcpkg.json
Papyrus.Reflection/include/Papyrus/: Reflection.h
Papyrus.Reflection/include/Papyrus/Reflection/: PapyrusScript.h
SkySpec/: CMakeLists.txt
SkySpec.Common/: CMakeLists.txt  vcpkg.json
SkySpec.Common/include/SkySpec/: TestCommon.h
SkySpec.Papyrus/: CMakeLists.txt
SkySpec.Papyrus/include/SkySpec/: PapyrusSpec.h
SkySpec.Papyrus/include/SkySpec/Papyrus/Internal/: PapyrusFunctionBindings.h
SkySpec.Runner/: CMakeLists.txt
SkySpec.Runner.Exe/: CMakeLists.txt
SkySpec.Runner.Exe/src/: main.cpp
SkySpec.Runner/include/SkySpec/: Runner.h  Runner_main.h
SkySpec.Server/: CMakeLists.txt
SkySpec.Server/include/SkySpec/: Server.h
SkySpec.Server/src/: Plugin.cpp  Server.cpp
SkySpec.TestRunner/: CMakeLists.txt
SkySpec.TestRunner.Exe/: CMakeLists.txt
SkySpec.TestRunner/include/SkySpec/: test.h
SkySpec.TestRunner/src/: main.cpp
TestCommonUser/: CMakeLists.txt
